--- a/index.html
+++ b/index.html
@@ -163,11 +163,10 @@
                     <p class="description">Foto kenangan semasa hidup</p>
                 </div>
             </div>
-            
+
             <div class="row row-cols-lg-3 row-cols-md-3 row-cols-sm-2 row-cols-1 justify-content-center">
                 <div class="col mt-3">
-                    <a href="img/gallery/1.1.jpg" data-toggle="lightbox" data-gallery="mygalery"
-                        data-caption="">
+                    <a href="img/gallery/1.1.jpg" data-toggle="lightbox" data-gallery="mygalery" data-caption="">
                         <img src="img/thumbnail/1.jpg" alt="foto 1" class="img-fluid w-100 rounded">
                     </a>
                 </div>
@@ -182,20 +181,17 @@
                     </a>
                 </div>
                 <div class="col mt-3">
-                    <a href="img/gallery/4.4.jpg" data-toggle="lightbox" data-gallery="mygalery"
-                        data-caption="">
+                    <a href="img/gallery/4.4.jpg" data-toggle="lightbox" data-gallery="mygalery" data-caption="">
                         <img src="img/thumbnail/4.jpg" alt="foto 1" class="img-fluid w-100 rounded">
                     </a>
                 </div>
                 <div class="col mt-3">
-                    <a href="img/gallery/5.5.jpg" data-toggle="lightbox" data-gallery="mygalery"
-                        data-caption="">
+                    <a href="img/gallery/5.5.jpg" data-toggle="lightbox" data-gallery="mygalery" data-caption="">
                         <img src="img/thumbnail/5.jpg" alt="foto 1" class="img-fluid w-100 rounded">
                     </a>
                 </div>
                 <div class="col mt-3">
-                    <a href="img/gallery/6.6.jpg" data-toggle="lightbox" data-gallery="mygalery"
-                        data-caption="">
+                    <a href="img/gallery/6.6.jpg" data-toggle="lightbox" data-gallery="mygalery" data-caption="">
                         <img src="img/thumbnail/6.jpg" alt="foto 1" class="img-fluid w-100 rounded">
                     </a>
                 </div>
@@ -220,14 +216,95 @@
                     <p class="description">Beberapa project yang sudah dibuat</p>
                 </div>
             </div>
+            <div class="row  mt-4 justify-content-center">
+                <div class="col-md-5 pt-3">
+                    <div class="card text-start col-12 ">
+                        <div class="card-body">
+                            <h4 class="card-title">Wedding
+                                <hr>
+                            </h4>
+                            <div class="list-group">
+                                <a href="https://naufalhafid.github.io/Haci" target="_blank"
+                                    class="list-group-item list-group-item-action">
+                                    Haci
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-5 pt-3">
+                    <div class="card text-start col-12 ">
+                        <div class="card-body">
+                            <h4 class="card-title">Food
+                                <hr>
+                            </h4>
+                            <div class="list-group">
+                                <a href="https://naufalhafid.github.io/warmncozy" target="_blank"
+                                    class="list-group-item list-group-item-action">
+                                    Warm & Cozy
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
+
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#273036" fill-opacity="1"
+            d="M0,256L20,245.3C40,235,80,213,120,181.3C160,149,200,107,240,117.3C280,128,320,192,360,229.3C400,267,440,277,480,245.3C520,213,560,139,600,106.7C640,75,680,85,720,112C760,139,800,181,840,202.7C880,224,920,224,960,192C1000,160,1040,96,1080,101.3C1120,107,1160,181,1200,181.3C1240,181,1280,107,1320,74.7C1360,43,1400,53,1420,58.7L1440,64L1440,320L1420,320C1400,320,1360,320,1320,320C1280,320,1240,320,1200,320C1160,320,1120,320,1080,320C1040,320,1000,320,960,320C920,320,880,320,840,320C800,320,760,320,720,320C680,320,640,320,600,320C560,320,520,320,480,320C440,320,400,320,360,320C320,320,280,320,240,320C200,320,160,320,120,320C80,320,40,320,20,320L0,320Z">
+        </path>
+    </svg>
+
+    <section id="contact" class="contact">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-12 col-10 text-center pt-2 ">
+                    <h2>Contact</h2>
+                    <hr class="hr">
+                    <p class="description">Hubungi saya di sini</p>
+                </div>
+            </div>
+            <div class="row  mt-4 justify-content-center">
+                <div class="col-md-5 pt-3">
+                    <div class="card text-start col-12 ">
+                        <div class="card-body">
+                            <!-- <h4 class="card-title">Contact
+                                <hr>
+                            </h4> -->
+                            <div class="list-group">
+                                <a href="https://naufalhafid46@gmail.com" target="_blank"
+                                    class="list-group-item list-group-item-action">
+                                    Email
+                                </a>
+                                <a href="https://instagram.com/nopaaaaall" target="_blank"
+                                    class="list-group-item list-group-item-action">
+                                    Instagram
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+
+    </footer>
+
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#273036" fill-opacity="1"
+            d="M0,32L20,58.7C40,85,80,139,120,165.3C160,192,200,192,240,170.7C280,149,320,107,360,74.7C400,43,440,21,480,32C520,43,560,85,600,112C640,139,680,149,720,128C760,107,800,53,840,64C880,75,920,149,960,176C1000,203,1040,181,1080,144C1120,107,1160,53,1200,53.3C1240,53,1280,107,1320,122.7C1360,139,1400,117,1420,106.7L1440,96L1440,0L1420,0C1400,0,1360,0,1320,0C1280,0,1240,0,1200,0C1160,0,1120,0,1080,0C1040,0,1000,0,960,0C920,0,880,0,840,0C800,0,760,0,720,0C680,0,640,0,600,0C560,0,520,0,480,0C440,0,400,0,360,0C320,0,280,0,240,0C200,0,160,0,120,0C80,0,40,0,20,0L0,0Z">
+        </path>
+    </svg>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
 
-        <script src="https://cdn.jsdelivr.net/npm/bs5-lightbox@1.8.3/dist/index.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bs5-lightbox@1.8.3/dist/index.bundle.min.js"></script>
 
 </body>
 
