--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact">
+                        <a class="nav-link" href="#social">
                             <i class="bi bi-envelope-fill d-block"></i>
-                            <span>Contact</span>
+                            <span>Social</span>
                         </a>
                     </li>
                 </ul>
@@ -76,7 +76,7 @@
         </main>
     </section>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path fill="#273036" fill-opacity="1"
+        <path fill="#1C1C1C" fill-opacity="1"
             d="M0,160L24,138.7C48,117,96,75,144,90.7C192,107,240,181,288,176C336,171,384,85,432,74.7C480,64,528,128,576,128C624,128,672,64,720,74.7C768,85,816,171,864,176C912,181,960,107,1008,101.3C1056,96,1104,160,1152,154.7C1200,149,1248,75,1296,42.7C1344,11,1392,21,1416,26.7L1440,32L1440,0L1416,0C1392,0,1344,0,1296,0C1248,0,1200,0,1152,0C1104,0,1056,0,1008,0C960,0,912,0,864,0C816,0,768,0,720,0C672,0,624,0,576,0C528,0,480,0,432,0C384,0,336,0,288,0C240,0,192,0,144,0C96,0,48,0,24,0L0,0Z">
         </path>
     </svg>
@@ -87,7 +87,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-12 col-10 text-center pt-2 ">
-                    <h2>About</h2>
+                    <h2>ABOUT</h2>
                     <hr class="hr">
                     <p class="description">Perjalanan dan riwayat hidup</p>
                 </div>
@@ -149,7 +149,7 @@
     </section>
 
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path fill="#273036" fill-opacity="1"
+        <path fill="#1C1C1C" fill-opacity="1"
             d="M0,256L20,245.3C40,235,80,213,120,181.3C160,149,200,107,240,117.3C280,128,320,192,360,229.3C400,267,440,277,480,245.3C520,213,560,139,600,106.7C640,75,680,85,720,112C760,139,800,181,840,202.7C880,224,920,224,960,192C1000,160,1040,96,1080,101.3C1120,107,1160,181,1200,181.3C1240,181,1280,107,1320,74.7C1360,43,1400,53,1420,58.7L1440,64L1440,320L1420,320C1400,320,1360,320,1320,320C1280,320,1240,320,1200,320C1160,320,1120,320,1080,320C1040,320,1000,320,960,320C920,320,880,320,840,320C800,320,760,320,720,320C680,320,640,320,600,320C560,320,520,320,480,320C440,320,400,320,360,320C320,320,280,320,240,320C200,320,160,320,120,320C80,320,40,320,20,320L0,320Z">
         </path>
     </svg>
@@ -158,7 +158,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-12 col-10 text-center pt-2 ">
-                    <h2>Gallery</h2>
+                    <h2>GALLERY</h2>
                     <hr class="hr">
                     <p class="description">Foto kenangan semasa hidup</p>
                 </div>
@@ -166,22 +166,31 @@
 
             <div class="row row-cols-lg-3 row-cols-md-3 row-cols-sm-2 row-cols-1 justify-content-center">
                 <div class="col mt-3">
-                        <img src="img/thumbnail/1.jpg" alt="foto 1" class="img-fluid w-100 rounded">
+                        <img src="img/thumbnail/1.jpg" alt="foto 1" class="">
                 </div>
                 <div class="col mt-3">
-                        <img src="img/thumbnail/2.jpg" alt="foto 1" class="img-fluid w-100 rounded">
+                        <img src="img/thumbnail/2.jpg" alt="foto 1" class="">
                 </div>
                 <div class="col mt-3">
-                        <img src="img/thumbnail/3.jpg" alt="foto 1" class="img-fluid w-100 rounded">
+                        <img src="img/thumbnail/3.jpg" alt="foto 1" class="">
                 </div>
                 <div class="col mt-3">
-                        <img src="img/thumbnail/4.jpg" alt="foto 1" class="img-fluid w-100 rounded">
+                        <img src="img/thumbnail/4.jpg" alt="foto 1" class="">
                 </div>
                 <div class="col mt-3">
-                        <img src="img/thumbnail/5.jpg" alt="foto 1" class="img-fluid w-100 rounded">
+                        <img src="img/thumbnail/5.jpg" alt="foto 1" class="">
                 </div>
                 <div class="col mt-3">
-                        <img src="img/thumbnail/6.jpg" alt="foto 1" class="img-fluid w-100 rounded">
+                        <img src="img/thumbnail/6.jpg" alt="foto 1" class="">
+                </div>
+                <div class="col mt-3">
+                        <img src="img/thumbnail/7.jpg" alt="foto 1" class="">
+                </div>
+                <div class="col mt-3">
+                        <img src="img/thumbnail/8.jpg" alt="foto 1" class="">
+                </div>
+                <div class="col mt-3">
+                        <img src="img/thumbnail/9.jpg" alt="foto 1" class="">
                 </div>
 
             </div>
@@ -189,7 +198,7 @@
     </section>
 
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path fill="#273036" fill-opacity="1"
+        <path fill="#1C1C1C" fill-opacity="1"
             d="M0,32L20,58.7C40,85,80,139,120,165.3C160,192,200,192,240,170.7C280,149,320,107,360,74.7C400,43,440,21,480,32C520,43,560,85,600,112C640,139,680,149,720,128C760,107,800,53,840,64C880,75,920,149,960,176C1000,203,1040,181,1080,144C1120,107,1160,53,1200,53.3C1240,53,1280,107,1320,122.7C1360,139,1400,117,1420,106.7L1440,96L1440,0L1420,0C1400,0,1360,0,1320,0C1280,0,1240,0,1200,0C1160,0,1120,0,1080,0C1040,0,1000,0,960,0C920,0,880,0,840,0C800,0,760,0,720,0C680,0,640,0,600,0C560,0,520,0,480,0C440,0,400,0,360,0C320,0,280,0,240,0C200,0,160,0,120,0C80,0,40,0,20,0L0,0Z">
         </path>
     </svg>
@@ -199,7 +208,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-12 col-10 text-center pt-2 ">
-                    <h2>Projects</h2>
+                    <h2>PROJETCS</h2>
                     <hr class="hr">
                     <p class="description">Beberapa project yang sudah dibuat</p>
                 </div>
@@ -235,21 +244,36 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-md-5 pt-3">
+                    <div class="card text-start col-12 ">
+                        <div class="card-body">
+                            <h4 class="card-title">Another
+                                <hr>
+                            </h4>
+                            <div class="list-group">
+                                <a href="https://naufalhafid.github.io/portofolio" target="_blank"
+                                    class="list-group-item list-group-item-action">
+                                    Portofolio
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
 
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path fill="#273036" fill-opacity="1"
+        <path fill="#1C1C1C" fill-opacity="1"
             d="M0,256L20,245.3C40,235,80,213,120,181.3C160,149,200,107,240,117.3C280,128,320,192,360,229.3C400,267,440,277,480,245.3C520,213,560,139,600,106.7C640,75,680,85,720,112C760,139,800,181,840,202.7C880,224,920,224,960,192C1000,160,1040,96,1080,101.3C1120,107,1160,181,1200,181.3C1240,181,1280,107,1320,74.7C1360,43,1400,53,1420,58.7L1440,64L1440,320L1420,320C1400,320,1360,320,1320,320C1280,320,1240,320,1200,320C1160,320,1120,320,1080,320C1040,320,1000,320,960,320C920,320,880,320,840,320C800,320,760,320,720,320C680,320,640,320,600,320C560,320,520,320,480,320C440,320,400,320,360,320C320,320,280,320,240,320C200,320,160,320,120,320C80,320,40,320,20,320L0,320Z">
         </path>
     </svg>
 
-    <section id="contact" class="contact">
+    <section id="social" class="social">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-12 col-10 text-center pt-2 ">
-                    <h2>Contact</h2>
+                    <h2>SOCIAL</h2>
                     <hr class="hr">
                     <p class="description">Hubungi saya di sini</p>
                 </div>
@@ -262,13 +286,30 @@
                                 <hr>
                             </h4> -->
                             <div class="list-group">
-                                <a href="https://naufalhafid46@gmail.com" target="_blank"
+                                <a href="mailto:naufalhafid46@gmail.com" target="_blank"
                                     class="list-group-item list-group-item-action">
+                                    <i class="bi bi-envelope-fill"></i>
                                     Email
                                 </a>
                                 <a href="https://instagram.com/nopaaaaall" target="_blank"
                                     class="list-group-item list-group-item-action">
+                                    <i class="bi bi-instagram"></i>
                                     Instagram
+                                </a>
+                                <a href="https://discord.gg/AJjrW7P" target="_blank"
+                                    class="list-group-item list-group-item-action">
+                                    <i class="bi bi-discord"></i>
+                                    Discord
+                                </a>
+                                <a href="https://github.com/NaufalHafid" target="_blank"
+                                    class="list-group-item list-group-item-action">
+                                    <i class="bi bi-github"></i>
+                                    Github
+                                </a>
+                                <a href="https://open.spotify.com/playlist/0HRjlYcjF9B6aU6VhugDtQ?si=_Rhgz3D8R2qWwGTcgCcMpA" target="_blank"
+                                    class="list-group-item list-group-item-action">
+                                    <i class="bi bi-spotify"></i>
+                                    Spotify
                                 </a>
                             </div>
                         </div>
@@ -278,15 +319,27 @@
         </div>
     </section>
 
-    <footer>
-
-    </footer>
-
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path fill="#273036" fill-opacity="1"
+        <path fill="#1C1C1C" fill-opacity="1"
             d="M0,32L20,58.7C40,85,80,139,120,165.3C160,192,200,192,240,170.7C280,149,320,107,360,74.7C400,43,440,21,480,32C520,43,560,85,600,112C640,139,680,149,720,128C760,107,800,53,840,64C880,75,920,149,960,176C1000,203,1040,181,1080,144C1120,107,1160,53,1200,53.3C1240,53,1280,107,1320,122.7C1360,139,1400,117,1420,106.7L1440,96L1440,0L1420,0C1400,0,1360,0,1320,0C1280,0,1240,0,1200,0C1160,0,1120,0,1080,0C1040,0,1000,0,960,0C920,0,880,0,840,0C800,0,760,0,720,0C680,0,640,0,600,0C560,0,520,0,480,0C440,0,400,0,360,0C320,0,280,0,240,0C200,0,160,0,120,0C80,0,40,0,20,0L0,0Z">
         </path>
     </svg>
+    
+    <footer class=" text-white pb-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <p class="text-start">Di design dan dibut menggunakan material: <br>
+                        Bootstrap <br> 
+                        Getwave
+                    </p>
+                </div>
+                <div class="col-lg-6">
+                    <p class="text-end">Created with by <a class="" href="https://www.instagram.com/nopaaaaall/">Naufal Hafid</a> </p>
+                </div>
+            </div>
+        </div>
+      </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
