--- a/index.html
+++ b/index.html
@@ -148,11 +148,7 @@
         </div>
     </section>
 
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path fill="#1C1C1C" fill-opacity="1"
-            d="M0,256L20,245.3C40,235,80,213,120,181.3C160,149,200,107,240,117.3C280,128,320,192,360,229.3C400,267,440,277,480,245.3C520,213,560,139,600,106.7C640,75,680,85,720,112C760,139,800,181,840,202.7C880,224,920,224,960,192C1000,160,1040,96,1080,101.3C1120,107,1160,181,1200,181.3C1240,181,1280,107,1320,74.7C1360,43,1400,53,1420,58.7L1440,64L1440,320L1420,320C1400,320,1360,320,1320,320C1280,320,1240,320,1200,320C1160,320,1120,320,1080,320C1040,320,1000,320,960,320C920,320,880,320,840,320C800,320,760,320,720,320C680,320,640,320,600,320C560,320,520,320,480,320C440,320,400,320,360,320C320,320,280,320,240,320C200,320,160,320,120,320C80,320,40,320,20,320L0,320Z">
-        </path>
-    </svg>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#1C1C1C" fill-opacity="1" d="M0,32L26.7,26.7C53.3,21,107,11,160,58.7C213.3,107,267,213,320,256C373.3,299,427,277,480,229.3C533.3,181,587,107,640,101.3C693.3,96,747,160,800,192C853.3,224,907,224,960,213.3C1013.3,203,1067,181,1120,149.3C1173.3,117,1227,75,1280,74.7C1333.3,75,1387,117,1413,138.7L1440,160L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"></path></svg>
     <!-- Gallery -->
     <section id="gallery" class="gallery">
         <div class="container">
@@ -263,11 +259,7 @@
         </div>
     </section>
 
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path fill="#1C1C1C" fill-opacity="1"
-            d="M0,256L20,245.3C40,235,80,213,120,181.3C160,149,200,107,240,117.3C280,128,320,192,360,229.3C400,267,440,277,480,245.3C520,213,560,139,600,106.7C640,75,680,85,720,112C760,139,800,181,840,202.7C880,224,920,224,960,192C1000,160,1040,96,1080,101.3C1120,107,1160,181,1200,181.3C1240,181,1280,107,1320,74.7C1360,43,1400,53,1420,58.7L1440,64L1440,320L1420,320C1400,320,1360,320,1320,320C1280,320,1240,320,1200,320C1160,320,1120,320,1080,320C1040,320,1000,320,960,320C920,320,880,320,840,320C800,320,760,320,720,320C680,320,640,320,600,320C560,320,520,320,480,320C440,320,400,320,360,320C320,320,280,320,240,320C200,320,160,320,120,320C80,320,40,320,20,320L0,320Z">
-        </path>
-    </svg>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#1C1C1C" fill-opacity="1" d="M0,256L26.7,224C53.3,192,107,128,160,96C213.3,64,267,64,320,101.3C373.3,139,427,213,480,229.3C533.3,245,587,203,640,165.3C693.3,128,747,96,800,112C853.3,128,907,192,960,218.7C1013.3,245,1067,235,1120,208C1173.3,181,1227,139,1280,128C1333.3,117,1387,139,1413,149.3L1440,160L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"></path></svg>
 
     <section id="social" class="social">
         <div class="container">
@@ -328,14 +320,14 @@
     <footer class=" text-white pb-5">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6">
-                    <p class="text-start">Di design dan dibut menggunakan material: <br>
+                <div class="col-lg-6 ">
+                    <p class="text-center">Di design dan dibut menggunakan material: <br>
                         Bootstrap <br> 
                         Getwave
                     </p>
                 </div>
                 <div class="col-lg-6">
-                    <p class="text-end">Created with by <a class="" href="https://www.instagram.com/nopaaaaall/">Naufal Hafid</a> </p>
+                    <p class="text-center">Created with by <a class="" href="https://www.instagram.com/nopaaaaall/">Naufal Hafid</a> </p>
                 </div>
             </div>
         </div>
