--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
 
-    <div class="navbar container fixed-bottom pb-5" data-aos="fade-up">
+    <div class="navbar container fixed-bottom pb-5">
         <div class="card text-center ">
             <div class="card-body">
                 <ul class="nav justify-content-center">
@@ -75,12 +75,12 @@
         <main>
             <div class=" col-lg-12">
                 <div class="row profile">
-                    <div class="col-7 text-end" data-aos="fade-right" data-aos-duration="2000">
+                    <div class="col-7 text-end" data-aos="fade-right" data-aos-duration="1500">
                         <h2>Naufal Hafid Mardhatillah</h2>
                         <p>Web Dev || Frontend Dev</p>
                     </div>
-                    <div class="col-3" data-aos="zoom-in" data-aos-duration="2000">
-                        <img data-aos="fade-right" src="img/thumbnail/1.jpg" alt="Naufal Hafid Mardhatillah" class="">
+                    <div  class="col-3">
+                        <img src="img/thumbnail/1.jpg" alt="Naufal Hafid Mardhatillah" >
                     </div>
                 </div>
             </div>
@@ -98,16 +98,15 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-12 col-10 text-center pt-2 ">
-                    <h2 data-aos="fade-down" data-aos-duration="2000">ABOUT</h2>
+                    <h2 data-aos="fade-down" data-aos-duration="1500">ABOUT</h2>
                     <hr class="hr">
-                    <p class="description" data-aos="fade-up" data-aos-duration="2000">Perjalanan dan riwayat hidup</p>
+                    <p class="description" data-aos="fade-up" data-aos-duration="1500">Perjalanan dan riwayat hidup</p>
                 </div>
             </div>
 
             <div class="row  mt-4 justify-content-center">
                 <div class="col-md-6 pt-3">
-                    <div class="card text-start col-12" data-aos="fade-right" data-aos-offset="300" data-aos-delay="0"
-                        data-aos-duration="2000">
+                    <div class="card text-start col-12" data-aos="fade-right" data-aos-duration="1500">
                         <div class="card-body">
                             <h4 class="card-title">Latar Belakang
                                 <hr>
@@ -136,9 +135,8 @@
                     </div>
                 </div>
 
-                <div class="col-md-6 pt-3">
-                    <div class="card text-start col-12 " data-aos="fade-up" data-aos-offset="300" data-aos-delay="100"
-                        data-aos-duration="2000">
+                <div class="col-md-6 pt-3" data-aos="fade-up" data-aos-duration="1500">
+                    <div class="card text-start col-12">
                         <div class="card-body">
                             <h4 class="card-title">Pendidikan
                                 <hr>
@@ -155,8 +153,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card text-start col-12 mt-3 " data-aos="fade-up" data-aos-offset="300"
-                        data-aos-delay="300" data-aos-duration="2000">
+                    <div class="card text-start col-12 mt-3 ">
                         <div class="card-body">
                             <h4 class="card-title">Hobi
                                 <hr>
@@ -186,39 +183,39 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-12 col-10 text-center pt-2 ">
-                    <h2 data-aos="fade-down" data-aos-duration="2000">GALLERY</h2>
+                    <h2 data-aos="fade-down" data-aos-duration="1500">GALLERY</h2>
                     <hr class="hr">
-                    <p class="description" data-aos="fade-up" data-aos-duration="2000">Foto kenangan semasa hidup</p>
+                    <p class="description" data-aos="fade-up" data-aos-duration="1500">Foto kenangan semasa hidup</p>
                 </div>
             </div>
 
             <div class="row row-cols-lg-3 row-cols-md-3 row-cols-sm-2 row-cols-1 justify-content-center">
                 <div class="col mt-3">
-                    <img src="img/thumbnail/1.jpg" alt="foto 1" class="" data-aos="flip-left" data-aos-duration="2000">
+                    <img src="img/thumbnail/1.jpg" alt="foto 1" class="" data-aos="flip-right" data-aos-duration="1500">
                 </div>
                 <div class="col mt-3">
-                    <img src="img/thumbnail/2.jpg" alt="foto 1" class="" data-aos="flip-left" data-aos-duration="2000">
+                    <img src="img/thumbnail/2.jpg" alt="foto 1" class="" data-aos="flip-right" data-aos-duration="1500">
                 </div>
                 <div class="col mt-3">
-                    <img src="img/thumbnail/3.jpg" alt="foto 1" class="" data-aos="flip-left" data-aos-duration="2000">
+                    <img src="img/thumbnail/3.jpg" alt="foto 1" class="" data-aos="flip-right" data-aos-duration="1500">
                 </div>
                 <div class="col mt-3">
-                    <img src="img/thumbnail/4.jpg" alt="foto 1" class="" data-aos="flip-left" data-aos-duration="2000">
+                    <img src="img/thumbnail/4.jpg" alt="foto 1" class="" data-aos="flip-right" data-aos-duration="1500">
                 </div>
                 <div class="col mt-3">
-                    <img src="img/thumbnail/5.jpg" alt="foto 1" class="" data-aos="flip-left" data-aos-duration="2000">
+                    <img src="img/thumbnail/5.jpg" alt="foto 1" class="" data-aos="flip-right" data-aos-duration="1500">
                 </div>
                 <div class="col mt-3">
-                    <img src="img/thumbnail/6.jpg" alt="foto 1" class="" data-aos="flip-left" data-aos-duration="2000">
+                    <img src="img/thumbnail/6.jpg" alt="foto 1" class="" data-aos="flip-right" data-aos-duration="1500">
                 </div>
                 <div class="col mt-3">
-                    <img src="img/thumbnail/7.jpg" alt="foto 1" class="" data-aos="flip-left" data-aos-duration="2000">
+                    <img src="img/thumbnail/7.jpg" alt="foto 1" class="" data-aos="flip-right" data-aos-duration="1500">
                 </div>
                 <div class="col mt-3">
-                    <img src="img/thumbnail/8.jpg" alt="foto 1" class="" data-aos="flip-left" data-aos-duration="2000">
+                    <img src="img/thumbnail/8.jpg" alt="foto 1" class="" data-aos="flip-right" data-aos-duration="1500">
                 </div>
                 <div class="col mt-3">
-                    <img src="img/thumbnail/9.jpg" alt="foto 1" class="" data-aos="flip-left" data-aos-duration="2000">
+                    <img src="img/thumbnail/9.jpg" alt="foto 1" class="" data-aos="flip-right" data-aos-duration="1500">
                 </div>
 
             </div>
@@ -236,15 +233,14 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-12 col-10 text-center pt-2 ">
-                    <h2 data-aos="fade-down" data-aos-duration="2000">PROJETCS</h2>
+                    <h2 data-aos="fade-down" data-aos-duration="1500">PROJETCS</h2>
                     <hr class="hr">
-                    <p class="description" data-aos="fade-up" data-aos-duration="2000">Beberapa project yang sudah
-                        dibuat</p>
+                    <p class="description" data-aos="fade-up" data-aos-duration="1500">Beberapa project yang sudah dibuat</p>
                 </div>
             </div>
-            <div class="row  mt-4 justify-content-center">
+            <div class="row  mt-4 justify-content-center" data-aos="fade-up" data-aos-duration="1500">
                 <div class="col-md-5 pt-3">
-                    <div class="card text-start col-12" data-aos="fade-right" data-aos-duration="2000">
+                    <div class="card text-start col-12">
                         <div class="card-body">
                             <h4 class="card-title">Wedding
                                 <hr>
@@ -259,7 +255,7 @@
                     </div>
                 </div>
                 <div class="col-md-5 pt-3">
-                    <div class="card text-start col-12" data-aos="fade-left" data-aos-duration="2000">
+                    <div class="card text-start col-12 ">
                         <div class="card-body">
                             <h4 class="card-title">Food
                                 <hr>
@@ -274,7 +270,7 @@
                     </div>
                 </div>
                 <div class="col-md-5 pt-3">
-                    <div class="card text-start col-12" data-aos="fade-up" data-aos-duration="2000">
+                    <div class="card text-start col-12 ">
                         <div class="card-body">
                             <h4 class="card-title">Another
                                 <hr>
@@ -302,14 +298,14 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-12 col-10 text-center pt-2 ">
-                    <h2 data-aos="fade-down" data-aos-duration="2000">SOCIAL</h2>
+                    <h2 data-aos="fade-down" data-aos-duration="1500">SOCIAL</h2>
                     <hr class="hr">
-                    <p class="description" data-aos="fade-up" data-aos-duration="2000">Hubungi saya di sini</p>
+                    <p class="description" data-aos="fade-down" data-aos-duration="1500">Hubungi saya di sini</p>
                 </div>
             </div>
             <div class="row  mt-4 justify-content-center">
                 <div class="col-md-5 pt-3">
-                    <div class="card text-start col-12" data-aos="zoom-in" data-aos-duration="2000">
+                    <div class="card text-start col-12 " data-aos="fade-up" data-aos-duration="1500">
                         <div class="card-body">
                             <!-- <h4 class="card-title">Contact
                                 <hr>
@@ -357,16 +353,16 @@
     <footer class="footer text-white">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 " data-aos="fade-up" data-aos-duration="2000">
-                    <p class="text-center">Didesign dan dibut menggunakan: <br>
+                <div class="col-lg-6 ">
+                    <p class="text-center" data-aos="fade-up" data-aos-duration="1500">Didesign dan dibut menggunakan: <br>
                         Bootstrap <br>
                         Getwave.io <br>
                         AOS
                     </p>
                 </div>
-                <div class="col-lg-6" data-aos="fade-up" data-aos-duration="2000">
-                    <p class="text-center">&copy;2023 NaufalHafid. All Rights Reserved.</p>
-                    <p class="text-center">Dibuat Oleh <a class="" href="https://github.com/NaufalHafid">Naufal
+                <div class="col-lg-6">
+                    <p class="text-center" data-aos="fade-up" data-aos-duration="1500">&copy;2023 NaufalHafid. All Rights Reserved.</p>
+                    <p class="text-center" data-aos="fade-up" data-aos-duration="1500">Dibuat Oleh <a class="" href="https://github.com/NaufalHafid">Naufal
                             Hafid</a> </p>
                 </div>
             </div>
@@ -377,11 +373,11 @@
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
 
-    <!-- AOS -->
+        <!-- AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
-    </script>
+      </script>
 </body>
 
 </html>
