perbaiki buh animasi

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                 <div class="col-md-12 col-10 text-center pt-2 ">
                     <h2 data-aos="fade-down" data-aos-duration="1500">SOCIAL</h2>
                     <hr class="hr">
-                    <p class="description" data-aos="fade-down" data-aos-duration="1500">Hubungi saya di sini</p>
+                    <p class="description" data-aos="fade-up" data-aos-duration="1500">Hubungi saya di sini</p>
                 </div>
             </div>
             <div class="row  mt-4 justify-content-center">
