--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                         <h2>Naufal Hafid Mardhatillah</h2>
                         <p>Web Dev || Frontend Dev</p>
                     </div>
-                    <div  class="col-3">
-                        <img src="img/thumbnail/1.jpg" alt="Naufal Hafid Mardhatillah" >
+                    <div class="col-3">
+                        <img src="img/thumbnail/1.jpg" alt="Naufal Hafid Mardhatillah">
                     </div>
                 </div>
             </div>
@@ -94,6 +94,7 @@
 
 
     <!-- About -->
+    <!-- <div class="circle1" ></div> -->
     <section id="about" class="about">
         <div class="container">
             <div class="row justify-content-center">
@@ -170,6 +171,7 @@
                 </div>
 
             </div>
+
         </div>
     </section>
 
@@ -189,7 +191,7 @@
                 </div>
             </div>
 
-            <div class="row row-cols-lg-3 row-cols-md-3 row-cols-sm-2 row-cols-1 justify-content-center">
+            <div class="row row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-cols-1 justify-content-center">
                 <div class="col mt-3">
                     <img src="img/thumbnail/1.jpg" alt="foto 1" class="" data-aos="flip-right" data-aos-duration="1000">
                 </div>
@@ -202,9 +204,9 @@
                 <div class="col mt-3">
                     <img src="img/thumbnail/4.jpg" alt="foto 1" class="" data-aos="flip-right" data-aos-duration="1000">
                 </div>
-                <div class="col mt-3">
+                <!-- <div class="col mt-3">
                     <img src="img/thumbnail/5.jpg" alt="foto 1" class="" data-aos="flip-right" data-aos-duration="1000">
-                </div>
+                </div> -->
                 <div class="col mt-3">
                     <img src="img/thumbnail/6.jpg" alt="foto 1" class="" data-aos="flip-right" data-aos-duration="1000">
                 </div>
@@ -235,7 +237,8 @@
                 <div class="col-md-12 col-10 text-center pt-2 ">
                     <h2 data-aos="fade-down" data-aos-duration="1500">PROJETCS</h2>
                     <hr class="hr">
-                    <p class="description" data-aos="fade-up" data-aos-duration="1500">Beberapa project yang sudah dibuat</p>
+                    <p class="description" data-aos="fade-up" data-aos-duration="1500">Beberapa project yang sudah
+                        dibuat</p>
                 </div>
             </div>
             <div class="row  mt-4 justify-content-center" data-aos="fade-up" data-aos-duration="1500">
@@ -285,6 +288,7 @@
                     </div>
                 </div>
             </div>
+            <div class="circle2" data-aos="zoom-in" data-aos-duration="1500"></div>
         </div>
     </section>
 
@@ -354,15 +358,18 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 ">
-                    <p class="text-center" data-aos="fade-up" data-aos-duration="1500">Didesign dan dibut menggunakan: <br>
+                    <p class="text-center" data-aos="fade-up" data-aos-duration="1500">Didesign dan dibut menggunakan:
+                        <br>
                         Bootstrap <br>
                         Getwave.io <br>
                         AOS
                     </p>
                 </div>
                 <div class="col-lg-6">
-                    <p class="text-center" data-aos="fade-up" data-aos-duration="1500">&copy;2023 NaufalHafid. All Rights Reserved.</p>
-                    <p class="text-center" data-aos="fade-up" data-aos-duration="1500">Dibuat Oleh <a class="" href="https://github.com/NaufalHafid">Naufal
+                    <p class="text-center" data-aos="fade-up" data-aos-duration="1500">&copy;2023 NaufalHafid. All
+                        Rights Reserved.</p>
+                    <p class="text-center" data-aos="fade-up" data-aos-duration="1500">Dibuat Oleh <a class=""
+                            href="https://github.com/NaufalHafid">Naufal
                             Hafid</a> </p>
                 </div>
             </div>
@@ -373,11 +380,11 @@
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
 
-        <!-- AOS -->
+    <!-- AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
-      </script>
+    </script>
 </body>
 
 </html>
