--- a/index.html
+++ b/index.html
@@ -241,11 +241,11 @@
                         dibuat</p>
                 </div>
             </div>
-            <div class="row  mt-4 justify-content-center" data-aos="fade-up" data-aos-duration="1500">
+            <div class="row mt-4 justify-content-center" data-aos="fade-up" data-aos-duration="1500">
                 <div class="col-md-5 pt-3">
                     <div class="card text-start col-12">
                         <div class="card-body">
-                            <h4 class="card-title">Wedding
+                            <h4 class="card-title text-center">Wedding
                                 <hr>
                             </h4>
                             <div class="list-group">
@@ -260,7 +260,7 @@
                 <div class="col-md-5 pt-3">
                     <div class="card text-start col-12 ">
                         <div class="card-body">
-                            <h4 class="card-title">Food
+                            <h4 class="card-title text-center">Food
                                 <hr>
                             </h4>
                             <div class="list-group">
@@ -275,7 +275,7 @@
                 <div class="col-md-5 pt-3">
                     <div class="card text-start col-12 ">
                         <div class="card-body">
-                            <h4 class="card-title">Another
+                            <h4 class="card-title text-center">Another
                                 <hr>
                             </h4>
                             <div class="list-group">
