--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
         <main>
             <div class=" col-lg-12">
                 <div class="row profile">
-                    <div class="col-7 text-end" data-aos="fade-right" data-aos-duration="1500">
+                    <div class="col-7 text-end" data-aos="fade-right" data-aos-duration="2000">
                         <h2>Naufal Hafid Mardhatillah</h2>
                         <p>Web Dev || Frontend Dev</p>
                     </div>
-                    <div class="col-3">
+                    <div class="col-3 " data-aos="flip-left" data-aos-duration="2000">
                         <img src="img/thumbnail/1.jpg" alt="Naufal Hafid Mardhatillah">
                     </div>
                 </div>
@@ -116,17 +116,17 @@
                                 Rekayasa Perangkat Lunak (RPL). Saat ini saya sedang melanjutkan kuliah di program studi
                                 Sistem Informasi untuk memperdalam pengetahuan dan keterampilan saya di bidang teknologi
                                 informasi.
-                                <br>
+                                <hr>
                                 Sebagai lulusan RPL, saya memiliki dasar yang kuat dalam pemrograman dan pengembangan
                                 perangkat lunak. Saya telah belajar bahasa pemrograman C/C++ dan juga Basic web yaitu
                                 HTML, CSS, sedikit tentang JS.
                                 Saya juga memiliki pengalaman dalam mengembangkan aplikasi berbasis web.
-                                <br>
+                                <hr>
                                 Saat ini, saya sedang berfokus untuk mengembangkan pengetahuan saya dalam bidang sistem
                                 informasi. Saya belajar tentang manajemen basis data, analisis sistem, serta manajemen
                                 proyek TI. Saya berharap, dengan pengetahuan yang saya dapatkan dari kuliah, saya dapat
                                 membantu perusahaan dalam meningkatkan kinerja dan efisiensi sistem informasi mereka.
-                                <br>
+                                <hr>
                                 Saya percaya bahwa kemampuan dan pengalaman saya di bidang teknologi informasi dapat
                                 memberikan nilai tambah bagi perusahaan di masa depan. Saya berkomitmen untuk terus
                                 belajar dan beradaptasi dengan perkembangan teknologi informasi yang terus berkembang.
