--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 
 
 
-    <div class="navbar container fixed-bottom pb-5">
+    <div class="navbar container fixed-bottom pb-5 " data-aos="fade-up" data-aos-duration="2000"
+        data-aos-anchor-placement="top-bottom">
         <div class="card text-center ">
             <div class="card-body">
                 <ul class="nav justify-content-center">
