--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-6 pt-3" data-aos="fade-up" data-aos-duration="1500">
+                <div class="col-md-6 pt-3" data-aos="fade-left" data-aos-duration="1500">
                     <div class="card text-start col-12">
                         <div class="card-body">
                             <h4 class="card-title">Pendidikan
@@ -175,7 +175,7 @@
 
         </div>
     </section>
-
+    
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path fill="#1C1C1C" fill-opacity="1"
             d="M0,32L26.7,26.7C53.3,21,107,11,160,58.7C213.3,107,267,213,320,256C373.3,299,427,277,480,229.3C533.3,181,587,107,640,101.3C693.3,96,747,160,800,192C853.3,224,907,224,960,213.3C1013.3,203,1067,181,1120,149.3C1173.3,117,1227,75,1280,74.7C1333.3,75,1387,117,1413,138.7L1440,160L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z">
