--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 
 
 
-    <div class="navbar container fixed-bottom pb-5 " data-aos="fade-up" data-aos-duration="2000"
-        data-aos-anchor-placement="top-bottom">
+    <div class="navbar container fixed-bottom pb-5 " >
         <div class="card text-center ">
             <div class="card-body">
                 <ul class="nav justify-content-center">
@@ -111,9 +110,11 @@
                     <div class="card text-start col-12" data-aos="fade-right" data-aos-duration="1500">
                         <div class="card-body">
                             <h4 class="card-title">Latar Belakang
-                                <hr>
+                                <!-- <hr> -->
                             </h4>
-                            <p class="card-text">Halo, perkenalkan, saya Naufal Hafid Mardhatillah, seorang lulusan
+                            <p class="card-text">
+                                <hr>
+                                Halo, perkenalkan, saya Naufal Hafid Mardhatillah, seorang lulusan
                                 Rekayasa Perangkat Lunak (RPL). Saat ini saya sedang melanjutkan kuliah di program studi
                                 Sistem Informasi untuk memperdalam pengetahuan dan keterampilan saya di bidang teknologi
                                 informasi.
@@ -153,6 +154,20 @@
                                     UPI YPTK Padang - Sistem Informasi
                                 </a>
                             </div>
+                        </div>
+                    </div>
+                    <div class="card text-start col-12 mt-3 ">
+                        <div class="card-body">
+                            <h4 class="card-title">Pengalaman
+                                <hr>
+                            </h4>
+                            <p class="card-text">
+                                Menonton Film
+                                <br>
+                                Bermain Game
+                                <br>
+                                Hal membosankan lainnya
+                            </p>
                         </div>
                     </div>
                     <div class="card text-start col-12 mt-3 ">
