--- a/index.html
+++ b/index.html
@@ -159,14 +159,19 @@
                     <div class="card text-start col-12 mt-3 ">
                         <div class="card-body">
                             <h4 class="card-title">Pengalaman
-                                <hr>
                             </h4>
                             <p class="card-text">
-                                Menonton Film
-                                <br>
-                                Bermain Game
-                                <br>
-                                Hal membosankan lainnya
+                                <hr>
+                                <h5>IT Support/SDN 06 Taeh Baruah</h5>
+                                <li>Membantu Instalasi proyektor yang akan digunakan pengajar</li>
+                                <li>Mempersiapkan materi PPT untuk pengajar</li>
+                                <li>Membantu  mendokumentasikan bahan PTK untuk pengajar</li>
+                                <li>Membantu berbagai hal tentang Akreditasi Sekolah</li>
+                                <hr>
+                                <h5>Frontend Dev/Magang Folarium Innotek Indonesia</h5>
+                                <li>Mengembangkan system ERP menggunakan framework CI dan Bootstrap dan mengesahkan tugas di Trello dan Bitbucket</li>
+                                <li>Memperbaiki kesalahan UI yang diminta</li>
+                                <li>Bertanggung jawab atas codingan yang bermasalah (bug) di bagiaan forntend</li>
                             </p>
                         </div>
                     </div>
