--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
             <div class="row  mt-4 justify-content-center">
                 <div class="col-md-6 pt-3">
-                    <div class="card text-start col-12" data-aos="fade-right" data-aos-duration="1500">
+                    <div class="card text-start col-12" data-aos="fade-up" data-aos-duration="1500">
                         <div class="card-body">
                             <h4 class="card-title">Latar Belakang
                                 <!-- <hr> -->
@@ -138,7 +138,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-6 pt-3" data-aos="fade-left" data-aos-duration="1500">
+                <div class="col-md-6 pt-3" data-aos="fade-up" data-aos-duration="1500">
                     <div class="card text-start col-12">
                         <div class="card-body">
                             <h4 class="card-title">Pendidikan
