--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <div class="one-quarter" id="switch">
                             <input type="checkbox" class="checkbox" id="chk" />
                             <label class="label" for="chk">
-                                <i class="bi bi-moon-stars-fill"></i>
+                                <i class="bi bi-moon-fill"></i>
                                 <i class="bi bi-sun-fill"></i>
                                 <div class="ball"></div>
                             </label>
