--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
         </path>
     </svg>
 
-    <footer class="footer text-white">
+    <footer class="footer">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 ">
@@ -405,7 +405,7 @@
                     </p>
                 </div>
                 <div class="col-lg-6">
-                    <p class="text-center" data-aos="fade-up" data-aos-duration="1500">&copy;2023 NaufalHafid. All
+                    <p class="text-center" data-aos="fade-up" data-aos-duration="1500">&copy;2024 NaufalHafid. All
                         Rights Reserved.</p>
                     <p class="text-center" data-aos="fade-up" data-aos-duration="1500">Dibuat Oleh <a class=""
                             href="https://github.com/NaufalHafid">Naufal
