--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                 </div>
             </div>
         </main>
+        <div class="circle2" data-aos="zoom-in" data-aos-duration="1500"></div>
     </section>
 
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
