--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
     <section id="home"
         class="home w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center align-items-center text-white">
         <main>
-            <div class=" col-lg-12">
+            <div class="container col-lg-12 ">
                 <div class="row profile">
                     <div class="col-7 text-end" data-aos="fade-right" data-aos-duration="2000">
                         <h2>Naufal Hafid Mardhatillah</h2>
                         <p>Web Dev || Frontend Dev</p>
                     </div>
-                    <div class="col-3 " data-aos="flip-left" data-aos-duration="2000">
+                    <div class="col-3 " data-aos="fade-left" data-aos-duration="2000">
                         <img src="img/thumbnail/1.jpg" alt="Naufal Hafid Mardhatillah">
                     </div>
                     <div class="container pt-5 d-flex justify-content-center align-items-center">
